Fix sizing issue on iPhone

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,14 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
   padding: 0;
   margin: 0;
 }
 
 #root {
+  max-height: -webkit-fill-available;
   height: 100vh;
 }
 
